<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/light_grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:background="@color/dark_grey"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>

            <EditText
                android:id="@+id/value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_coin"
            android:background="@color/dark_grey"
            android:layout_marginBottom="20dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_dolar"
            android:layout_marginVertical="30dp"/>

        <TextView
            android:id="@+id/resDolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_euro"
            android:layout_marginVertical="30dp"/>

        <TextView
            android:id="@+id/resEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:text="@string/calculate"
            android:backgroundTint="@color/green"/>


    </LinearLayout>

</LinearLayout>